--- a/README.textile
+++ b/README.textile
@@ -7,4 +7,4 @@ Basically, the "proxy":http://github.com/lukas-vlcek/node.es/tree/master/proxy/ 
 * You can provide handlers to modify HTTP client request (e.g. you can ensure that @size@ is not too big) and Elastic Search response (e.g. you can remove sensitive data).
 * It can round-robin client requests among active HTTP enabled nodes (it periodically refreshes list of active nodes), thus, it can provide a single URL for clients to communicate with Elastic Search cluster.
 
-You can find simple example in "proxy-example.js":http://github.com/lukas-vlcek/node.es/proxy/proxy-example.js
+You can find simple example in "proxy-example.js":http://github.com/lukas-vlcek/node.es/blob/master/proxy/proxy-example.js
