--- a/README.textile
+++ b/README.textile
@@ -8,3 +8,4 @@ Basically, the "proxy":http://github.com/lukas-vlcek/node.es/tree/master/proxy/ 
 * It can round-robin client requests among active HTTP enabled nodes (it periodically refreshes list of active nodes), thus, it can provide a single URL for clients to communicate with Elastic Search cluster.
 
 You can find simple example in "proxy-example.js":http://github.com/lukas-vlcek/node.es/blob/master/proxy/proxy-example.js
+More detailed documenation can be found in source code of "elasticsearch-proxy.js":http://github.com/lukas-vlcek/node.es/blob/master/proxy/elasticsearch-proxy.js
